Fixed spacing on Resume section

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   border-color: #EC9A29;
   position: fixed;
   top: 0;
+  z-index: 1;
 
   /* border-bottom: 20px ;
   border-bottom-color: #A8201A; */
