--- a/src/components/style/Resume.css
+++ b/src/components/style/Resume.css
@@ -1,12 +1,45 @@
 .resume-section {
-    text-align: left; /* Set the text alignment to left */
-    margin: 0; /* Reset any margin applied */
-    padding: 0; /* Reset any padding applied */
+    text-align: left;
+    margin: 0; 
+    padding: 0; 
+    margin-bottom: 500px;
+    border: 5px;
+    border-color: white;
   }
   
-  /* Add this to override Bootstrap's default styling for embed */
+  /* .d-flex {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 80%; 
+  }
+  
   .embed-responsive {
     width: 100%;
     height: 100%;
-    min-height: 70vh; /* Adjust the minimum height as needed */
+    min-height: 70vh; 
+  } */
+
+  
+.d-flex {
+  /* Adjust styling based on your layout needs */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+embed {
+  /* Adjust styling based on your layout needs */
+  width: 90%; /* Adjust the width based on your design preference */
+  max-width: 70%;
+  height: 75vh; /* Set the height to 100% of the viewport height */
+  margin-top: 20px; /* Adjust the margin based on your design preference */
+  z-index: 0; /* Set the desired z-index value */
+}
+
+@media screen and (max-width: 768px) {
+  embed {
+    /* Adjust styling for smaller screens if needed */
+    margin-top: 10px;
   }
+}
